--- a/app_python/static/style/style.css
+++ b/app_python/static/style/style.css
@@ -2,6 +2,32 @@ body {
     font-family: sans-serif;
 }
 
+/* Style pour le menu de navigation */
+nav ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #333;
+}
+
+nav li {
+    float: left;
+}
+
+nav li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+nav li a:hover {
+    background-color: #111;
+}
+
+
 form {
     width: 500px;
     margin: auto;
