--- a/app_python/templates/register.html
+++ b/app_python/templates/register.html
@@ -1,26 +1,14 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Inscription</title>
-</head>
-
-<body>
-    <h1>Inscription</h1>
-    <form action="/register/" method="post">
-        {% csrf_token %}
-        <label for="username">Nom d'utilisateur</label>
-        <input type="text" name="username" id="username" required>
-        <label for="email">Email</label>
-        <input type="email" name="email" id="email" required>
-        <label for="password">Mot de passe</label>
-        <input type="password" name="password" id="password" required>
-        <label for="password2">Confirmer le mot de passe</label>
-        <input type="password" name="password2" id="password2" required>
-        <input type="submit" value="S'inscrire
-    </form>
-</body>
-</html>
+{% extends 'base.html' %}
+{% block content %}
+<h2>Register</h2>
+<form method="post">
+    {% csrf_token %}
+    <label for="username">Username:</label>
+    <input type="text" name="username" required>
+    <br>
+    <label for="password">Password:</label>
+    <input type="password" name="password" required>
+    <br>
+    <input type="submit" value="Register">
+</form>
+{% endblock %}
