--- a/app_python/templates/register.html
+++ b/app_python/templates/register.html
@@ -3,12 +3,8 @@
 <h2>Register</h2>
 <form method="post">
     {% csrf_token %}
-    <label for="username">Username:</label>
-    <input type="text" name="username" required>
-    <br>
-    <label for="password">Password:</label>
-    <input type="password" name="password" required>
-    <br>
-    <input type="submit" value="Register">
+    {{ form.as_p }}
+    <input type="submit" value="Sign up">
 </form>
+
 {% endblock %}
