--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,13 +1,17 @@
-{% extends 'base.html' %}
+{% extends '_base.html' %}
 {% block content %}
 <h2>Login</h2>
 <form method="post">
     {% csrf_token %}
     <label for="username">Username:</label>
-    <input type="text" name="username" required>
+    <label>
+        <input type="text" name="username" required>
+    </label>
     <br>
     <label for="password">Password:</label>
-    <input type="password" name="password" required>
+    <label>
+        <input type="password" name="password" required>
+    </label>
     <br>
     <input type="submit" value="Log In">
 </form>
