--- a/templates/_base.html
+++ b/templates/_base.html
@@ -15,7 +15,7 @@
   <link rel="shortcut icon" type="image/x-icon" href="{% static 'images/favicon.ico' %}">
 
   {% block css %}
-  <link rel="stylesheet" href="{% static 'css/base.css' %}">
+  <link rel="stylesheet" href="{% static 'style/style.css' %}">
   {% endblock %}
 </head>
 
@@ -29,7 +29,6 @@
       </h5>
       <nav class="my-2 my-md-0 mr-md-3">
         {% if user.is_authenticated %}
-        <a class="dropdown-item" href="{% url 'logout' %}">Log out</a>
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
             <a class="nav-link dropdown-toggle" href="#" id="userMenu" data-toggle="dropdown" aria-haspopup="true"
