--- a/templates/_base.html
+++ b/templates/_base.html
@@ -23,25 +23,15 @@
 <main role="main">
     <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm">
         <h5 class="my-0 mr-md-auto font-weight-normal">
-            <a href="{% url 'index' %}">Librairie Python</a>
-
-
+            <a href="{% url 'index_books' %}">Librairie Python</a>
         </h5>
         <nav class="my-2 my-md-0 mr-md-3">
             {% if user.is_authenticated %}
-                <ul class="navbar-nav ml-auto">
-                    <li class="nav-item">
-                        <p>
-                            Bienvenue {{ user }}{{ user.name }}
-                            <button class=" btn btn-primary justify-content-right">Deconnexion</button>
-                        </p>
-                        <div class="dropdown-menu dropdown-menu-right" aria-labelledby="userMenu">
-                            <a class="dropdown-item" href="{% url 'password_change' %}">Change password</a>
-                            <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="{% url 'logout' %}">Log out</a>
-                        </div>
-                    </li>
-                </ul>
+
+                Bienvenue {{ user }}{{ user.name }}
+                <a class="btn btn-primary justify-content-right" href="{% url 'logout' %}">Deconnexion</a>
+                <a class="btn btn-primary" href="{% url 'password_change' %}">Change password</a>
+
             {% else %}
                 <form class="form-inline ml-auto">
                     <a href="{% url 'login' %}" class="btn btn-outline-secondary">Log in</a>
@@ -67,16 +57,16 @@
     <script src="{% static 'js/base.js' %}"></script>
 {% endblock javascript %}
 
-  <footer class="footer fixed-bottom">
+<footer class="footer fixed-bottom">
     <footer class="text-center text-lg-start">
-      <!-- Copyright -->
-      <div class="text-center p-3">
-        © 2021 Copyright:
-        <a class="text-dark" href="https://mdbootstrap.com/">MyGES - Premium.com</a>
-      </div>
-      <!-- Copyright -->
+        <!-- Copyright -->
+        <div class="text-center p-3">
+            © 2021 Copyright:
+            <a class="text-dark" href="https://mdbootstrap.com/">MyGES - Premium.com</a>
+        </div>
+        <!-- Copyright -->
     </footer>
-  </footer>
+</footer>
 
 </body>
 
