--- a/templates/_base.html
+++ b/templates/_base.html
@@ -23,22 +23,46 @@
 <main role="main">
     <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm">
         <h5 class="my-0 mr-md-auto font-weight-normal">
-            <a href="{% url 'index_books' %}">Librairie Python</a>
+            <a href="{% url 'index_books' %}">Librairie Django</a>
         </h5>
-        <nav class="my-2 my-md-0 mr-md-3">
+        <div class="container">
             {% if user.is_authenticated %}
-
-                Bienvenue {{ user }}{{ user.name }}
-                <a class="btn btn-primary justify-content-right" href="{% url 'logout' %}">Deconnexion</a>
-                <a class="btn btn-primary" href="{% url 'password_change' %}">Change password</a>
-
-            {% else %}
-                <form class="form-inline ml-auto">
-                    <a href="{% url 'login' %}" class="btn btn-outline-secondary">Log in</a>
-                    <a href="{% url 'signup' %}" class="btn btn-primary ml-2">Sign up</a>
-                </form>
+                {% if user.is_staff %}
+                    <ul class="nav justify-content-center">
+                        <li class="nav-item">
+                            <a class="nav-link active" href="{% url 'library_list' %}">Librairies</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Link</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Link</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+                        </li>
+                    </ul>
+                {% endif %}
             {% endif %}
-        </nav>
+        </div>
+
+        <div class="justify-content-end">
+            <nav class="my-2 my-md-0 mr-md-3">
+                {% if user.is_authenticated %}
+
+                    Bienvenue <a href="#">{{ user }}{{ user.name }}</a>
+                    <a class="btn btn-primary justify-content-right ml-3" href="{% url 'logout' %}">Deconnexion</a>
+                    <!--<a class="btn btn-primary" href="{% url 'password_change' %}">Change password</a>-->
+
+                {% else %}
+                    <form class="form-inline ml-auto">
+                        <a href="{% url 'login' %}" class="btn btn-outline-secondary">Log in</a>
+                        <a href="{% url 'signup' %}" class="btn btn-primary ml-2">Sign up</a>
+                    </form>
+                {% endif %}
+            </nav>
+        </div>
+
     </div>
 </main>
 
@@ -57,12 +81,12 @@
     <script src="{% static 'js/base.js' %}"></script>
 {% endblock javascript %}
 
-<footer class="footer fixed-bottom">
+<footer class="footer">
     <footer class="text-center text-lg-start">
         <!-- Copyright -->
         <div class="text-center p-3">
-            © 2021 Copyright:
-            <a class="text-dark" href="https://mdbootstrap.com/">MyGES - Premium.com</a>
+            © 2023 Copyright:
+            <a class="text-dark" href="https://mdbootstrap.com/">MyGES - Librairy Django</a>
         </div>
         <!-- Copyright -->
     </footer>
