--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -1,4 +1,6 @@
 {% extends '_base.html' %}
 {% block content %}
-pages après la connexion (template/pages/home.html)
+    {% if user.is_superuser %}
+        redirect('admin-index')
+    {% endif %}
 {% endblock content %}
