add feature new library

--- a/templates/pages/libraries/index.html
+++ b/templates/pages/libraries/index.html
@@ -55,7 +55,7 @@
     </table>
     {% if user.is_authenticated %}
         {% if user.is_staff %}
-            <a href="/books/new" class="btn btn-outline-primary">Add a new book</a>
+            <a href="/libraries/new" class="btn btn-primary">Ajouter une Librairie</a>
         {% endif %}
     {% endif %}
 {% endblock %}
