--- a/templates/_base.html
+++ b/templates/_base.html
@@ -39,6 +39,9 @@
                         <a class="nav-link" href="{% url 'index_topics' %}">Forum</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="{% url 'index_reading_groups' %}">Groupe de lecture</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
                     </li>
                 </ul>
