--- a/templates/pages/reading-groups/details.html
+++ b/templates/pages/reading-groups/details.html
@@ -23,8 +23,8 @@
     </div>
     {% endfor %}
 
-    {% if user.is_authenticated and user.is_staff %}
-    <a href="{% url 'new_reading_group' group_user.id %}" class="btn btn-outline-primary">Ajouter un groupe de
+    {% if user.is_authenticated %}
+    <a href="{% url 'join_reading_group' reading_group.id %}" class="btn btn-outline-primary">Rejoindre le groupe de
         lecture</a>
     {% endif %}
 
