--- a/templates/pages/reading-groups/details.html
+++ b/templates/pages/reading-groups/details.html
@@ -13,7 +13,7 @@
     </div>
     <!-- Liste des commentaires du topic -->
     <h2>Participants</h2>
-    {% for group_user in group_users %}
+    {% for group_user in participants %}
     <div class="card-body border">
         <p>{{ group_user.user.username }}</p>
     </div>
@@ -24,8 +24,13 @@
     {% endfor %}
 
     {% if user.is_authenticated %}
+    {% if user in participants %}
+    <a href="{% url 'leave_reading_group' reading_group.id %}" class="btn btn-outline-primary">Quitter le groupe de
+        lecture</a>
+    {% else %}
     <a href="{% url 'join_reading_group' reading_group.id %}" class="btn btn-outline-primary">Rejoindre le groupe de
         lecture</a>
+    {% endif %}
     {% endif %}
 
 </div>
